Changelog
=========

Development
===========

- Contact.Relationship.IsClient is true by default.

v0.0.15.4
=========

Released on July 30, 2018

- Add static CurrencyHelpers.Currencies as a Dictionary<string, Currency>.
- Contact.Currency default value is now set to CurrencyHelpers.Currencies["EUR"]
- TODO: add missing currencies other than EUR and USD.

v0.0.15.3
=========

Released on July 30, 2018

- Rename Contact.PublicAdministrationIndex to PublicAdministrationCode.
- DisplayAttributes for Contact, Currency, and Relationship properties.

v0.0.15.2
=========

Released on July 20, 2018

- Contact.Bank refactored in to Bank.Id. Closes adam/#7.

v0.0.15.1
=========

Released on July 12, 2018

- Vat.Name and Vat.Code now carry the Required attribute.

v0.0.15
=======

Released on May 30th, 2018.

- Remove Company.FiscalProfile.Vat property.
- Remove Fee.Vat property.
- Remove Payment.Bank property.
- Remove Payment.Fee property.
- Add Company.FiscalProfile.VatId property.
- Add Fee.VatId property.
- Add Payment.BankId property.
- Add Payment.FeeId property.

v0.0.14
=======

Released on May 25, 2018.

- Add IBank interface from which both the new Bank and the now renamed BankAsProperty classes inherit.
- Rename current Bank class as BankAsProperty, intended to be used when a Bank is a property.
- Add Bank class which inherits from BaseModelWithCompanyId and is intended to be used for the remote Bank endpoint.
- Add DisplayAttribute attributes to Payment (and subclasses) properties
- Add DisplayAttribute attributes to Bank properties
- Add DisplayAttribute attributes to Fee properties
- Drop PaymentMethod.PublicAdministrationPaymentMethod property.
- Add PaymentMethod.PublicAdministrationCode property.
- Add static PaymentHelpers.PaymentMethods read-only collection.
- Payment.PaymentMethod defaults to MP01/contanti.
- Refactor all resx files by moving them to the Resources folder.

v0.0.13
=======

Released on May 4, 2018.
